# mslab

./: README.md  apim-mcp-temp.md  appgw.md  arc.md  azure-openai.md  containerapps.md  firewall-bastion-natgw.md  foundry.md  key-vault.md  oauth-2.0-flows.md  openclaw.md  purview-notes.md  scu_template.json  secops-notes.md  sentinel-init.md  sentinel-security-events.md  temp-a2a-notes.md  temp-securing-ai-agents.md
ConfigMgr/: README.md  boundary.md  endpointprotection.md  epp.md  setup.md  sup.md  update.md  wsus.md
agent-365/: README.md  a365-cli.md  enable-security-for-ai.md  publish-agents-to-teams-copilot.md
agent-365/maf-sample/: README.md  containerapp.yaml  setup.md
agent-365/maf-sample/app/: agent.py  host_agent_server.py
agent-365/sample-langchain/: Dockerfile  README.md  pyproject.toml
agent-365/sample-langchain/app/: agent.py  host_agent_server.py
agent-365/sample-maf/: containerapp.yaml  pyproject.toml
agent-365/samples/: README.md
agent-365/samples/agent-framework/: Dockerfile  README.md  containerapp.yaml  pyproject.toml
agent-365/samples/agent-framework/app/: agent.py  agent_interface.py  host_agent_server.py  start_with_generic_host.py  token_cache.py  token_manager.py
agent-365/samples/langchain/: README.md  containerapp.yaml  pyproject.toml
agent-365/samples/langchain/app/: agent.py  agent_interface.py  host_agent_server.py  local_authentication_options.py  mcp_tool_registration_service.py  start_with_generic_host.py  token_cache.py
agent-365/samples/python/agent-framework/: README.md  setup.md
containerapps/: DOCKERFILE  README.md  app.py  manifest-dockerfile.yaml  manifest-vanilla.yaml  requirements.txt
end-user-controls/: device-onboarding.md
entra/: README.md  conditional-access.md
entra/agent-id/: README.md  auth-flows.md  permissions-and-consent.md  provisioning.md
entra/flows/: README.md  authorization-code.md  client-credentials.md  on-behalf-of.md
langchain-teams-bot/: .funcignore  README.md  agent.py  bot.py  function_app.py  host.json  local.settings.json  requirements.txt  setup.md
langchain/teams-bot/: README.md  agent.py  bot.py  function_app.py  setup.md
