[project]
name = "a365-maf-sample"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    # LangChain SDK and MCP adapter
    "langchain",
    "langchain-core",
    "langchain-mcp-adapters",
    "langchain-azure-ai",

    # Microsoft Agents SDK - Official packages for hosting and integration
    "microsoft-agents-hosting-aiohttp",
    "microsoft-agents-hosting-core",
    "microsoft-agents-authentication-msal",
    "microsoft-agents-activity",

    # Azure SDK components
    "azure-identity",

    # Core dependencies
    "aiohttp",

    # Microsoft Agent 365 SDK packages
    "microsoft_agents_a365_tooling",
    "microsoft_agents_a365_runtime",
    "microsoft_agents_a365_notifications",

    # Observability using Microsoft Opentelemetry
    "microsoft-opentelemetry"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]